--- a/app/src/main/res/layout/pay_add_layout.xml
+++ b/app/src/main/res/layout/pay_add_layout.xml
@@ -169,13 +169,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/update_des" />
 
-        <TextView
+        <com.google.android.material.chip.ChipGroup
             android:id="@+id/update_tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:background="@drawable/add_textview_style"
-            android:textSize="20sp"
+            app:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/update_tag_text"
             app:layout_constraintTop_toBottomOf="@id/update_des" />
@@ -235,11 +235,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:src="@drawable/ic_reset"
+            app:layout_goneMarginTop="15dp"
             app:layout_constraintStart_toStartOf="@id/tag_box_start"
             app:layout_constraintTop_toBottomOf="@id/update_tags" />
 
-        <GridLayout
-            android:id="@+id/word_box"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/tag_box"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:columnCount="3"
@@ -247,9 +248,10 @@
             app:layout_constraintBottom_toBottomOf="@id/tag_box_bottom"
             app:layout_constraintEnd_toEndOf="@id/calendar_end"
             app:layout_constraintStart_toStartOf="@id/tag_box_start"
-            app:layout_constraintTop_toTopOf="@id/tag_box_top">
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@id/new_reset">
 
-        </GridLayout>
+        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
